<resources>
    <string name="app_name">Ravely</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">Song Name</string>
    <string name="additional">Additional Info</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_artist">Song Artist</string>
    <string name="song_duration">0:00</string>
    <string name="song_number">0</string>
    <string name="select_song_name">Song name</string>
    <string name="music_is_not_found">Music is not found</string>
</resources>