<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/tv_song_number"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/song_number" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:ellipsize="end"
                android:gravity="bottom"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/song_name" />

            <TextView
                android:id="@+id/tv_song_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="@string/song_artist" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_song_duration"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/song_duration" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark" />

</LinearLayout>